# qutesearch

./: .gitignore  CHANGELOG.md  README.md  flake.nix  qutesearch.cabal
app/: Main.hs
