cabal-version:      3.4
name:               qutesearch
version:            0.1.0.0

author:             Franco Cortesi

extra-source-files: CHANGELOG.md

executable qutesearch
    main-is:          Main.hs
    build-depends:    base ^>=4.16.1.0
                    , parsec
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
